--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@eslint/js": "^9.18.0",
     "@types/node": "^22.10.5",
     "eslint": "^9.18.0",
+    "prisma": "^6.2.1",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   },
   "dependencies": {
+    "@prisma/client": "^6.2.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "zod": "^3.24.1"
