--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.10.5",
     "eslint": "^9.18.0",
     "prisma": "^6.2.1",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "zod": "^3.24.1"
